test: set up a test to reproduce the error